[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Fairy Dust Tree.gd" type="Script" id=1]
[ext_resource path="res://assets/Map Elements/fairylog.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 140, 60 )

[node name="Fairy Log" type="StaticBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="Respawn Timer" type="Timer" parent="."]

[node name="HarvestArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarvestArea"]
position = Vector2( 4, 4 )
shape = SubResource( 2 )

[connection signal="timeout" from="Respawn Timer" to="." method="_on_Respawn_Timer_timeout"]
[connection signal="body_entered" from="HarvestArea" to="." method="_on_HarvestArea_body_entered"]
[connection signal="body_exited" from="HarvestArea" to="." method="_on_HarvestArea_body_exited"]
